Added Albums activity showing album thumbnails

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,11 +9,14 @@
         </activity>
         <activity android:name=".Activities.ScreenSlideStatePagerActivity">
         </activity>
-        <activity android:name=".Activities.AlbumsGrid">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN"/>
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
+        <activity android:name=".Activities.AlbumActivity">
+
+        </activity>
+        <activity android:name=".Activities.AlbumsActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
     </application>
 </manifest>
