--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,18 +10,19 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name=".Activities.ScreenSlidePagerActivity">
-        </activity>
         <activity android:name=".Activities.PhotoSlideshowActivity">
         </activity>
-        <activity android:name=".Activities.AlbumActivity">
-
+        <activity android:name=".Activities.AlbumActivity"
+        android:label="Edit Album">
         </activity>
-        <activity android:name=".Activities.AlbumsActivity">
+        <activity android:name=".Activities.AlbumsActivity"
+        android:label="Photo Albums">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".settings.SettingsActivity"
+        android:label="Settings"/>
     </application>
 </manifest>
