scaled thumbnail loading. Todo: Rotation, button sizes, different scalling for different activites, onResume/oncreate, check if state pager being used

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,5 +24,8 @@
         </activity>
         <activity android:name=".settings.SettingsActivity"
         android:label="Settings"/>
+        <activity android:name=".Activities.FileExplorerActivity">
+
+        </activity>
     </application>
 </manifest>
