Replacing Slideshow Activity with simpler Photo Activity (not complete) Todo: scalling for slideshow dynamically Slideshow user controls Album activity title onResume/oncreate

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,5 +27,9 @@
         <activity android:name=".Activities.FileExplorerActivity">
 
         </activity>
+        <activity android:name=".Activities.PhotoActivity"
+                  android:label="Photo View">
+
+    </activity>
     </application>
 </manifest>
