Added new activity for photos by date (with month picker)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,10 +15,6 @@
         </activity>
         <activity android:name=".Activities.AlbumsActivity"
         android:label="Photo Albums">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".settings.SettingsActivity"
         android:label="Settings"/>
@@ -29,5 +25,12 @@
                   android:label="Photo View">
 
     </activity>
+        <activity android:name=".Activities.PhotosByDateActivity"
+                  android:label="Choose Photos">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
