shuffle button to radio buttons

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,9 @@
 
         <activity android:name=".Activities.PhotoActivity"
                   android:label="Photo View">
+        </activity>
+        <activity android:name=".Activities.SlideshowActivity"
+                  android:label="Photo View">
 
     </activity>
         <activity android:name=".Activities.PhotosByDateActivity"
