Multi select and CAB implemented in new activity and adapter. Only used on Bucket Fragment To refactor : No need to have checked logic in the adapter, or buttons in the activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,9 @@
         <activity android:name=".Activities.CheckablePhotoGridActivity"
                   android:label="View Photos">
         </activity>
+        <activity android:name=".Activities.MultiCheckablePhotoGridActivity"
+                  android:label="View Photos">
+        </activity>
         <activity android:name=".Activities.SlideshowActivity"
                   android:label="Photo View">
 
